Fixed collapsed flow width - Issue: 74702

--- a/src/components/flow-collapsed/flow-collapsed.scss
+++ b/src/components/flow-collapsed/flow-collapsed.scss
@@ -5,7 +5,6 @@
   margin: auto;
   margin-top: 8px;
   margin-bottom: 8px;
-  width: 91%;
   overflow: hidden;
   -webkit-animation: var(--animation-time);
   animation: var(--animation-time);
